--- a/doityourself.html
+++ b/doityourself.html
@@ -2,20 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Floor Coat Inc.</title>
-    <meta name="description" content="">
+    <title>Do It Yourself Garage Coating System</title>
+    <meta name="description" content="Floor Coat Inc. offers you a complete coating kit, purchase with confidence directly from professional installers. The do-it-yourself floor coating kit includes everything you need to transform your concrete into something you can be proud of.">
     <meta name="viewport" content="width=device-width">
-
 
     <!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="icon" href="favicon.ico">
-
-    <script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
-
 </head>
 <body>
 
@@ -101,10 +96,10 @@
 <!-- /Footer -->
 
 
-
+<script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
 <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/classie.js"></script>
+<script type="text/javascript" src="js/classie.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script type="text/javascript">
     $(window).load(function(){
