--- a/index.html
+++ b/index.html
@@ -2,23 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Floor Coat Inc.</title>
-    <meta name="description" content="">
+    <title>Floor Coat Inc. - Garage floor coatings, Grind & Polished Concret</title>
+    <meta name="description" content="Floor Coat Inc. has the solution for any of your flooring needs. We can rejuvenate your old slab of concrete with our Polyaspartic Chip Coating system or our Epoxy floor coating. We also offer Grinding & Polishing concrete. We do both residential and commercial floors.">
     <meta name="viewport" content="width=device-width">
 
 
     <!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel='stylesheet' href='css/jquery.kwicks.css' />
-    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" href="favicon.ico">
-
-    <script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
-
-    <!--<script type="text/javascript" src="js/jquery-ui.min.js"></script>-->
-
 </head>
 <body>
 
@@ -247,7 +241,7 @@
 
                 <div class="col-md-6 col-sm-12">
                     <div class="special-align">
-                        <p class="container-fluid">Create the perfect flooring solution for any of your commercial flooring needs. </p>
+                        <p class="container-fluid">Create the perfect flooring solution for any of your commercial flooring needs. With any of our flooring solutions you can be sure that your commercial space is durable and looks great.</p>
                         <a href="#" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
                     </div>
                 </div>
@@ -281,13 +275,13 @@
     </div>
 </div>
 <!-- /Footer -->
-
+<script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
 <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/classie.js"></script>
-<script type="text/javascript" src="js/jquery.kwicks.js"></script>
+<script type="text/javascript" src="js/classie.min.js"></script>
+<script type="text/javascript" src="js/jquery.kwicks.min.js"></script>
 <script type='text/javascript' src="js/jquery.ba-cond.min.js"></script>
-<script type='text/javascript' src="js/jquery.slitslider.js"></script>
+<script type='text/javascript' src="js/jquery.slitslider.min.js"></script>
 <script type='text/javascript' src="js/wow.min.js"></script>
 <script type="text/javascript">
 
