--- a/services.html
+++ b/services.html
@@ -2,21 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Floor Coat Inc.</title>
-    <meta name="description" content="">
+    <title>Polyaspartic & Epoxy floor coatings - Grind & Polished Concrete</title>
+    <meta name="description" content="Rejuvenate your old slab of concrete with our Polyaspartic Chip Coating system or our Epoxy Floor coating. We also offer Grinding & Polishing concrete. We can customize any flooring solution to meet your needs. We can even add your logo so you can show off your company logo with pride.">
     <meta name="viewport" content="width=device-width">
 
 
     <!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/swipebox.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/swipebox.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="icon" href="favicon.ico">
-
-    
-
 </head>
 <body>
 
@@ -111,7 +107,9 @@
                     <h2>Benefits</h2>
                     <div id="poly-advantages">
                         <ul>
-                            <li><b></b></li>
+                            <li><b>Easy to clean, seamless surface:</b>Our polyaspartic floor coatings offers durable, seamless surfaces that can easily be wiped clean with very little upkeep.</li>
+                            <li><b>Chemically Resistant:</b>Our floor coatings are chemically resistant for all commercial flooring purposes.</li>
+                            <li><b>Cost Savings:</b>Rejuvenating an old slab or finishing a brand new slab, we provide you with a durable and heard wearing surface which means your floor will last for years to come with easy maintenance.</li>
                         </ul>
                     </div>
                 </div>
@@ -436,11 +434,11 @@
 </div>
 <!-- /Footer -->
 
-<script src="http://code.jquery.com/jquery-2.0.3.js"></script>
+<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
-<script type="text/javascript" src="js/classie.js"></script>
-<script type="text/javascript" src="js/jquery.swipebox.js"></script>
+<script type="text/javascript" src="js/classie.min.js"></script>
+<script type="text/javascript" src="js/jquery.swipebox.min.js"></script>
 <script src="js/wow.min.js"></script>
 
 <script type="text/javascript">
