--- a/contact.html
+++ b/contact.html
@@ -2,25 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Floor Coat Inc.</title>
-    <meta name="description" content="">
+    <title>Floor Coat Inc. - Contact Us</title>
+    <meta name="description" content="Contact Floor Coat Inc. today and we can offer you a custom flooring solution to meet your every desire.">
     <meta name="viewport" content="width=device-width">
-
-
-    <!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="icon" href="favicon.ico">
-
-    <script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
-
 </head>
 <body>
-
     <div id="preloader"></div>
-
 <header>
     <nav class="navbar navbar-fixed-top myNav">
         <div class="navContainer">
@@ -97,13 +88,10 @@
 
 
 <!-- /Main -->
-
-
-
-
+<script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
 <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/classie.js"></script>
+<script type="text/javascript" src="js/classie.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script type="text/javascript">
     $(window).load(function(){
