--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
 
     <!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/swipebox.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="icon" href="favicon.ico">
@@ -109,7 +109,7 @@
                         <ul>
                             <li><b>Easy to clean, seamless surface:</b>Our polyaspartic floor coatings offers durable, seamless surfaces that can easily be wiped clean with very little upkeep.</li>
                             <li><b>Chemically Resistant:</b>Our floor coatings are chemically resistant for all commercial flooring purposes.</li>
-                            <li><b>Cost Savings:</b>Rejuvenating an old slab or finishing a brand new slab, we provide you with a durable and heard wearing surface which means your floor will last for years to come with easy maintenance.</li>
+                            <li><b>Cost Savings:</b>Rejuvenating an old slab or finishing a brand new slab, we provide you with a durable and hard wearing surface which means your floor will last for years to come with easy maintenance.</li>
                         </ul>
                     </div>
                 </div>
@@ -246,7 +246,7 @@
                     <div id="poly-advantages">
                         <ul>
                              <li><b>Cost Savings:</b> Repairing and re-finishing the existing slab makes this a cost effective choice for any concrete project.</li>
-                             <li><b>Easy to Clean:</b> Unlike tiles and carpet there are no grout jpints or fibers to attract dust and allergens</li>
+                             <li><b>Easy to Clean:</b> Unlike tiles and carpet there are no grout joints or fibers to attract dust and allergens</li>
                              <li><b>Less maintenance and longer service life:</b> Polished floors are easy to clean, requiring only the occasional damp mopping. Polishing eliminates the need for messy waxes or coatings.</li>
                              <li><b>High light reflectivity:</b> Polished concrete presents a bright, cleand, and professional image. You can also save energy by reducing artificial lighting requirements</li>
                         </ul>
@@ -438,7 +438,7 @@
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
 <script type="text/javascript" src="js/classie.min.js"></script>
-<script type="text/javascript" src="js/jquery.swipebox.min.js"></script>
+<script type="text/javascript" src="js/jquery.swipebox.js"></script>
 <script src="js/wow.min.js"></script>
 
 <script type="text/javascript">
