--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 		<nav>
 
 			<div class="bt-menu" id="bt-menu">
-				<div class="bt-menu-trigger">
+				<div class="bt-menu-trigger nav-trigger">
 					<span>MENU</span>
 				</div>
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Garage Polyaspartic Chip Coating</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="garage-poly.html">Garage Polyaspartic Chip Coating</a></li>
 					<li><a href="#">Grind & Polished Concrete</a></li>
 					<li><a href="#">Decorative Epoxy</a></li>
 					<li><a href="#">Driveway & Stair Coatings</a></li>
@@ -32,7 +32,7 @@
 			</div>
 
 
-			<div class="col-xs-10 col-xs-offset-1">
+			<div class="col-md-10 col-md-offset-1 col-sm-12">
 				<div class="title-row row">
 					<a href="index.html"><span class="text-center title">FLOOR COAT INC.</span></a>
 				</div>
@@ -63,16 +63,20 @@
 			        </span>
 			    </div>
 
+			    <div class="contact-us-link nav-trigger">
+			    	<span>CONTACT US</span>	
+			    </div>
+
 			</div>
 		</nav>
 	</header>
 
-	<section class="content col-xs-8 col-xs-offset-2 row">
+	<section class="content col-md-8 col-md-offset-2 col-sm-12 row">
 
 		<div class="welcome row">
 
 			<div class="welcome-title">
-				<span class="content-title">Welcome to Floor Coat Inc.</span>
+				<span>Welcome To Floor Coat Inc.</span>
 			</div>
 
 			<div class="col-xs-12 row">
@@ -84,7 +88,7 @@
 			</div>
 
 			<div class="welcome-title col-xs-12 row">
-				<span class="content-title">What we specialize in</span>
+				<span>What We Specialize In</span>
 
 
 			</div>
@@ -200,9 +204,27 @@
 	</section>
 
 	<footer class="col-xs-12">
-		<div class="col-xs-8 col-xs-offset-2 footer-wrapper">
+		<div class="col-md-8 col-md-offset-2 col-sm-12 footer-wrapper">
 
-			<div class="footer-contact-wrapper col-xs-6">
+			<div class="col-xs-12">
+				<div class="connet-with-us">
+					<span>CONNECT with US</span>
+				</div>
+
+				<div class="social-media">
+					<a class="fa-2x" href="https://twitter.com/EngraveConcrete"><i class="fa fa-twitter"></i></a>
+					<a class="fa-2x" href="https://facebook.com/floorcoat"><i class="fa fa-facebook"></i></a>
+					<a class="fa-2x" href="https://pinterest.com/floorcoat/"><i class="fa fa-pinterest"></i></a>
+					<a class="fa-2x" href="https://linkedin.com/pub/jordan-chorneyko/93/99b/671"><i class="fa fa-linkedin"></i></a>
+					<a class="fa-2x" href="https://youtube.com/user/decorativesurfaces?feature=guide"><i class="fa fa-youtube"></i></a>
+					<a class="fa-2x" href="https://www.yelp.com/biz/floor-coat-inc-st-albert"><i class="fa fa-yelp"></i></a>
+				</div>
+			</div>
+
+
+
+
+<!-- 			<div class="footer-contact-wrapper col-xs-6">
 				<i class="fa-2x fa fa-phone"></i><span class="phone-number">780-966-3796</span> <br />
 				<i class="fa-2x fa fa-envelope"></i><span class="email">Floorcoat@shaw.ca</span>
 			</div>
@@ -214,14 +236,14 @@
 				<a class="fa-3x" href="https://linkedin.com/pub/jordan-chorneyko/93/99b/671"><i class="fa fa-linkedin"></i></a>
 				<a class="fa-3x" href="https://youtube.com/user/decorativesurfaces?feature=guide"><i class="fa fa-youtube"></i></a>
 				<a class="fa-3x" href="https://www.yelp.com/biz/floor-coat-inc-st-albert"><i class="fa fa-yelp"></i></a>
-			</div>
+			</div> -->
 		</div>
 
-		<div class="col-xs-2">&nbsp</div>
+<!-- 		<div class="col-md-2 col-sm-0">&nbsp</div>
 
 		<div class="col-xs-4 col-xs-offset-4 copyright-row">
 			<span>Floor Coat Inc. &#9400; 2017</span>
-		</div>
+		</div> -->
 	</footer>
 
 	<div class="back-to-top">
