--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<div class="col-xs-12 welcome-content-wrapper">
 				<p class="welcome-content">
 					Floor Coat Inc. is an Edmonton-based decorative flooring company serving all of Alberta. We offer a wide range of flooring options and specialize in concrete resurfacing and restoration. Some of our services include: polyaspartic garage & commercial floor coatings, grind & polished concrete, surface preparation, decorative epoxy and many other coatings for any interior or exterior surface.
-					<br /> <br /> 
+					<br /> <br />
 					What sets Floor Coat Inc. apart from everyone else? We build trust and great relationships with our clients. We are a family run business that takes great pride in our work. We are craftsmen who have over 70 years combined of residential and commercial contracting experience. We are a team of innovative professionals. We have extensive product knowledge and are experts at what we do, giving us complete confidence to guarantee our work to you.
 				</p>
 			</div>
@@ -114,7 +114,9 @@
 					<div class="col-xs-3">&nbsp</div>
 				</div>
 
-				<button class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn More</button>
+				<a href="garage-polyaspartic-chip-coating.html">
+					<button class="col-xs-6 col-xs-offset-3 learn-more-button" href="garage-polyaspartic-chip-coating.html">Click here to learn More</button>
+				</a>
 
 			</div>
 
@@ -130,8 +132,9 @@
 
 					<div class="col-xs-3">&nbsp</div>
 				</div>
-
-				<button class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn More</button>
+				<a href="grind-polished-concrete.html">
+					<button class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn More</button>
+				</a>
 			</div>
 
 
@@ -147,8 +150,9 @@
 
 					<div class="col-xs-3">&nbsp</div>
 				</div>
-
-				<button class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn more</button>			
+				<a href="decorative-epoxy.html">
+					<button class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn more</button>
+				</a>
 			</div>
 
 			<div class="specialization-row driveway-stair-specialization">
@@ -163,8 +167,9 @@
 
 					<div class="col-xs-3">&nbsp</div>
 				</div>
-
-				<button class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn more</button>
+				<a href="driveway-stair-coating.html">
+					<button class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn more</button>
+				</a>
 			</div>
 
 			<div class="specialization-row commercial-specialization">
@@ -179,8 +184,9 @@
 
 					<div class="col-xs-3">&nbsp</div>
 				</div>
-
-				<a class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn more</a>			
+				<a href="commercial-flooring.html">
+					<button class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn more</button>
+				</a>
 			</div>
 
 			<div class="specialization-row logo-specialization">
@@ -195,8 +201,9 @@
 
 					<div class="col-xs-3">&nbsp</div>
 				</div>
-
-				<button class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn more</button>
+				<a href="custom-logos.html">
+					<button class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn more</button>
+				</a>
 			</div>
 
 		</div>
