--- a/decorative-epoxy.html
+++ b/decorative-epoxy.html
@@ -40,7 +40,7 @@
 				</div>
 
 				<div class="contact-us-link nav-trigger">
-					<span>CONTACT US</span>
+					<a href="contact-us.html"><span>CONTACT US</span></a>
 				</div>
 			</div>
 
@@ -114,8 +114,14 @@
 		</div>
 
 		<div class="col-md-12">
-			<div class="row portfolio-title">
+			<div class="portfolio-title">
 				<span>Recent Decorative Epoxy Jobs</span>
+			</div>
+
+			<br />
+
+			<div class="click-hint">
+				<span>Hint: Click on a picture for a full screen view</span>
 			</div>
 
 			<div class="text-center portfolio-items">
@@ -144,38 +150,30 @@
 		</div>
 
 		<div class="col-xs-12 contact-us-row">
-			<a class="contact-us-button">Contact us to book your appointment</a>
+			<a class="contact-us-button" href="contact-us.html">Contact us to book your appointment</a>
 		</div>
 
 	</section>
 
-	<footer class="col-xs-12">
-		<div class="col-md-8 col-md-offset-2 col-sm-12 footer-wrapper">
+	<footer class="col-lg-10 col-lg-offset-1 col-md-12">
 
-			<div class="footer-contact-wrapper col-xs-6">
-				<i class="fa-2x fa fa-phone"></i><span class="phone-number">780-966-3796</span> <br />
-				<i class="fa-2x fa fa-envelope"></i><span class="email">Floorcoat@shaw.ca</span>
-			</div>
-
-			<div class="footer-link-wrapper col-xs-6">
-				<a class="fa-3x" href="https://twitter.com/EngraveConcrete"><i class="fa fa-twitter"></i></a>
-				<a class="fa-3x" href="https://facebook.com/floorcoat"><i class="fa fa-facebook"></i></a>
-				<a class="fa-3x" href="https://pinterest.com/floorcoat/"><i class="fa fa-pinterest"></i></a>
-				<a class="fa-3x" href="https://linkedin.com/pub/jordan-chorneyko/93/99b/671"><i class="fa fa-linkedin"></i></a>
-				<a class="fa-3x" href="https://youtube.com/user/decorativesurfaces?feature=guide"><i class="fa fa-youtube"></i></a>
-				<a class="fa-3x" href="https://www.yelp.com/biz/floor-coat-inc-st-albert"><i class="fa fa-yelp"></i></a>
-			</div>
+		<div class="col-xs-12 social-media">
+			<a class="fa-2x" href="https://twitter.com/EngraveConcrete"><i class="fa fa-twitter"></i></a>
+			<a class="fa-2x" href="https://facebook.com/floorcoat"><i class="fa fa-facebook"></i></a>
+			<a class="fa-2x" href="https://pinterest.com/floorcoat/"><i class="fa fa-pinterest"></i></a>
+			<a class="fa-2x" href="https://linkedin.com/pub/jordan-chorneyko/93/99b/671"><i class="fa fa-linkedin"></i></a>
+			<a class="fa-2x" href="https://youtube.com/user/decorativesurfaces?feature=guide"><i class="fa fa-youtube"></i></a>
+			<a class="fa-2x" href="https://www.yelp.com/biz/floor-coat-inc-st-albert"><i class="fa fa-yelp"></i></a>
 		</div>
 
-		<div class="col-md-2 col-sm-0">&nbsp</div>
-
-		<div class="col-xs-4 col-xs-offset-4 copyright-row">
-			<span>Floor Coat Inc. &#9400; 2017</span>
+		<div class="col-xs-12 footer-information">
+			<span>Floor Coat Inc. &#9400; 2017</span> <br  />
+			<span>Edmonton, Alberta, Canada</span>
 		</div>
 	</footer>
 
 	<div class="back-to-top">
-		<a class="fa-4x"><i class="fa fa-arrow-up"></i></a>
+		<a class="fa-3x"><i class="fa fa-arrow-up"></i></a>
 	</div>
 
 	<script type="text/javascript" src="compiled/vendor.bundle.js"></script>
