--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="description" content="">
 
 	<link rel="stylesheet" href="compiled/home.css">
+
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400" rel="stylesheet">
 </head>
 
 <body>
@@ -44,7 +46,6 @@
 			</div>
 
 			<div class="col-md-10 col-md-offset-1 col-sm-12 kwicks-wrapper">
-
 			    <div class="col-xs-8 col-xs-offset-2">
 			        <span class="hidden-xs">
 			            <ul class='kwicks kwicks-horizontal'>
@@ -66,15 +67,13 @@
 			            </ul>
 			        </span>
 			    </div>
-
 			</div>
 		</nav>
 	</header>
 
 	<section class="content col-lg-10 col-lg-offset-1 col-md-12">
 
-		<div class="welcome row">
-
+		<div class="welcome col-xs-12">
 			<div class="welcome-title" id="welcome-title-container">
 				<span>Welcome To Floor Coat Inc.</span>
 			</div>
@@ -87,156 +86,145 @@
 				</p>
 			</div>
 
-			<div class="welcome-title col-xs-12 row">
+			<div class="welcome-title col-xs-12">
 				<span>What We Specialize In</span>
-
-
 			</div>
 			<div class="welcome-arrow">
 				<div class="welcome-arrow-inner"></div>
 			</div>
-
 		</div>
 
-		<div class="specialization">
-
+		<div class="specialization col-xs-12">
 			<div class="specialization-row garage-poly-specialization">
-
-				<div class="specialization-title row">
+				<div class="specialization-title col-xs-12">
 					<span class="covered-content-title">Garage Polyaspartic Chip Coating</span>
 				</div>
 
-				<div class="row">
-					<p class="col-xs-6 col-xs-offset-3">
+				<div class="col-xs-12">
+					<p>
 						We can improve your damaged, slippery, ugly, and hard to clean concrete floor. A concrete floor covered with our polyaspartic chip or quartz coating looks great, adds life to your floor, and is easy to maintain. With the high flexibility of the polyaspartic coating it withstands abuse and last longer than anything else, making it ideal for both residential and commercial application.
 					</p>
-
-					<div class="col-xs-3">&nbsp</div>
 				</div>
 
-				<a href="garage-polyaspartic-chip-coating.html">
-					<button class="col-xs-6 col-xs-offset-3 learn-more-button" href="garage-polyaspartic-chip-coating.html">Click here to learn More</button>
-				</a>
-
+				<div class="col-xs-12">
+					<a class="learn-more-button" href="garage-polyaspartic-chip-coating.html">
+						Click here to learn more
+					</a>
+				</div>
 			</div>
 
 			<div class="specialization-row grind-polish-specialization">
-				<div class="specialization-title row">
+				<div class="specialization-title col-xs-12">
 					<span class="covered-content-title">Grind & Polished Concrete</span>
 				</div>
 
-				<div class="row">
-					<p class="col-xs-6 col-xs-offset-3">
+				<div class="col-xs-12">
+					<p>
 						Concrete has always been famous for its durability, but recently it’s becoming the most popular decorative flooring option because its rich look and cost-saving features. We offer industry leading technology and techniques including many pieces of machinery for all sizes of any commercial or residential floors.
 					</p>
-
-					<div class="col-xs-3">&nbsp</div>
 				</div>
-				<a href="grind-polished-concrete.html">
-					<button class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn More</button>
-				</a>
+
+				<div class="col-xs-12">
+					<a class="learn-more-button" href="grind-polished-concrete.html">
+						Click here to learn more
+					</a>
+				</div>
 			</div>
 
-
 			<div class="specialization-row epoxy-specialization">
-				<div class="specialization-title row">
+				<div class="specialization-title col-xs-12">
 					<span class="covered-content-title">Decorative Epoxy</span>
 				</div>
 
-				<div class="row">
-					<p class="col-xs-6 col-xs-offset-3">
+				<div class="col-xs-12">
+					<p>
 						Epoxy flooring is a unique way to turn ordinary concrete floor into a functional work of art. Decorative epoxy finishes offer a unique rich look with colour depth making it desirable for any residential or commercial application.
 					</p>
-
-					<div class="col-xs-3">&nbsp</div>
 				</div>
-				<a href="decorative-epoxy.html">
-					<button class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn more</button>
-				</a>
+
+				<div class="col-xs-12">
+					<a class="learn-more-button" href="decorative-epoxy.html">
+						Click here to learn more
+					</a>
+				</div>
 			</div>
 
 			<div class="specialization-row driveway-stair-specialization">
-				<div class="specialization-title row">
+				<div class="specialization-title col-xs-12">
 					<span class="covered-content-title">Driveway & Stair Coating</span>
 				</div>
 
-				<div class="row">
-					<p class="col-xs-6 col-xs-offset-3">
+				<div class="col-xs-12">
+					<p>
 						Epoxy flooring is a unique way to turn ordinary concrete floor into a functional work of art. Decorative epoxy finishes offer a unique rich look with colour depth making it desirable for any residential or commercial application.
 					</p>
-
-					<div class="col-xs-3">&nbsp</div>
 				</div>
-				<a href="driveway-stair-coating.html">
-					<button class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn more</button>
-				</a>
+
+				<div class="col-xs-12">
+					<a class="learn-more-button" href="driveway-stair-coating.html">
+						Click here to learn more
+					</a>
+				</div>
 			</div>
 
 			<div class="specialization-row commercial-specialization">
-				<div class="specialization-title row">
+				<div class="specialization-title col-xs-12">
 					<span class="covered-content-title">Commercial Flooring</span>
 				</div>
 
-				<div class="row">
-					<p class="col-xs-6 col-xs-offset-3">
+				<div class="col-xs-12">
+					<p>
 					Create the perfect flooring solution for any of your commercial flooring needs. With any of our flooring solutions you can be sure that your commercial space is durable and looks great.
 					</p>
-
-					<div class="col-xs-3">&nbsp</div>
 				</div>
-				<a href="commercial-flooring.html">
-					<button class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn more</button>
-				</a>
+
+				<div class="col-xs-12">
+					<a class="learn-more-button" href="commercial-flooring.html">
+						Click here to learn more
+					</a>
+				</div>
 			</div>
 
 			<div class="specialization-row logo-specialization">
-				<div class="specialization-title row">
+				<div class="specialization-title col-xs-12">
 					<span class="covered-content-title">Custom Logos</span>
 				</div>
 
-				<div class="row">
-					<p class="col-xs-6 col-xs-offset-3">
+				<div class="col-xs-12">
+					<p>
 					Show off your logo in style! Add your logo to any of our flooring solutions to create your perfect space. Whether it be residential or commercial, the possibilities are endless with Floor Coat on your side.
 					</p>
-
-					<div class="col-xs-3">&nbsp</div>
 				</div>
-				<a href="custom-logos.html">
-					<button class="col-xs-6 col-xs-offset-3 learn-more-button">Click here to learn more</button>
-				</a>
-			</div>
 
+				<div class="col-xs-12">
+					<a class="learn-more-button" href="custom-logos.html">
+						Click here to learn more
+					</a>
+				</div>
+			</div>
 		</div>
 
 	</section>
 
-	<footer class="col-xs-12">
-		<div class="col-lg-10 col-lg-offset-1 col-md-10 footer-wrapper">
+	<footer class="col-lg-10 col-lg-offset-1 col-md-12">
 
-			<div class="footer-contact-wrapper col-xs-6">
-				<i class="fa-2x fa fa-phone"></i><span class="phone-number">780-966-3796</span> <br />
-				<i class="fa-2x fa fa-envelope"></i><span class="email">Floorcoat@shaw.ca</span>
-			</div>
-
-			<div class="footer-link-wrapper col-xs-6">
-				<a class="fa-3x" href="https://twitter.com/EngraveConcrete"><i class="fa fa-twitter"></i></a>
-				<a class="fa-3x" href="https://facebook.com/floorcoat"><i class="fa fa-facebook"></i></a>
-				<a class="fa-3x" href="https://pinterest.com/floorcoat/"><i class="fa fa-pinterest"></i></a>
-				<a class="fa-3x" href="https://linkedin.com/pub/jordan-chorneyko/93/99b/671"><i class="fa fa-linkedin"></i></a>
-				<a class="fa-3x" href="https://youtube.com/user/decorativesurfaces?feature=guide"><i class="fa fa-youtube"></i></a>
-				<a class="fa-3x" href="https://www.yelp.com/biz/floor-coat-inc-st-albert"><i class="fa fa-yelp"></i></a>
-			</div>
+		<div class="col-xs-12 social-media">
+			<a class="fa-2x" href="https://twitter.com/EngraveConcrete"><i class="fa fa-twitter"></i></a>
+			<a class="fa-2x" href="https://facebook.com/floorcoat"><i class="fa fa-facebook"></i></a>
+			<a class="fa-2x" href="https://pinterest.com/floorcoat/"><i class="fa fa-pinterest"></i></a>
+			<a class="fa-2x" href="https://linkedin.com/pub/jordan-chorneyko/93/99b/671"><i class="fa fa-linkedin"></i></a>
+			<a class="fa-2x" href="https://youtube.com/user/decorativesurfaces?feature=guide"><i class="fa fa-youtube"></i></a>
+			<a class="fa-2x" href="https://www.yelp.com/biz/floor-coat-inc-st-albert"><i class="fa fa-yelp"></i></a>
 		</div>
 
-		<div class="col-lg-1 col-md-0">&nbsp</div>
-
-		<div class="col-xs-4 col-xs-offset-4 copyright-row">
-			<span>Floor Coat Inc. &#9400; 2017</span>
+		<div class="col-xs-12 footer-information">
+			<span>Floor Coat Inc. &#9400; 2017</span> <br  />
+			<span>Edmonton, Alberta, Canada</span>
 		</div>
 	</footer>
 
 	<div class="back-to-top">
-		<a class="fa-4x"><i class="fa fa-arrow-up"></i></a>
+		<a class="fa-3x"><i class="fa fa-arrow-up"></i></a>
 	</div>
 
 	<script type="text/javascript" src="compiled/vendor.bundle.js"></script>
