--- a/decorative-epoxy.html
+++ b/decorative-epoxy.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
 <head>
 	<meta charset="utf-8">
-	<title>FLOOR COAT INC.</title>
+	<title>Floor Coat - Decorative Epoxy</title>
 	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width">
 
 	<link rel="stylesheet" href="compiled/services.css">
-
+	<link rel="icon" href="favicon.ico">
 </head>
 
 <body>
@@ -14,84 +15,16 @@
 
 	<header>
 		<nav>
-			<div class="col-xs-12 top-menu-wrapper">
-				<div class="bt-menu" id="bt-menu">
-					<div class="bt-menu-trigger nav-trigger">
-						<span>MENU</span>
-					</div>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="garage-polyaspartic-chip-coating.html">Garage Polyaspartic Chip Coating</a></li>
-						<li><a href="grind-polished-concrete.html">Grind & Polished Concrete</a></li>
-						<li><a href="decorative-epoxy.html">Decorative Epoxy</a></li>
-						<li><a href="driveway-stair-coating.html">Driveway & Stair Coatings</a></li>
-						<li><a href="commercial-flooring.html">Commercial Flooring</a></li>
-						<li><a href="custom-logos.html">Custom Logos</a></li>
-						<li><a href="contact-us.html">Contact Us</a></li>
-					</ul>
-				</div>
 
-				<div class="title-row">
-					<a href="index.html"><span class="text-center title">FLOOR COAT INC.</span></a>
-				</div>
-
-				<div class="sub-title-row">
-					<span class="text-center sub-title">Polyaspartic | Epoxy | Grind & Polish</span>
-				</div>
-
-				<div class="contact-us-link nav-trigger">
-					<a href="contact-us.html"><span>CONTACT US</span></a>
-				</div>
-			</div>
-
-			<div class="col-md-10 col-md-offset-1 col-sm-12 kwicks-wrapper">
-
-			    <div class="col-xs-8 col-xs-offset-2">
-			        <span class="hidden-xs">
-			            <ul class='kwicks kwicks-horizontal'>
-			                <li id="garage-chip-panel">
-			                	<div class="kwicks-title">Garage Polyaspartic Chip Coating</div>
-			                </li>
-			                <li id="grind-panel">
-			                	<div class="kwicks-title">Grind & Polished Concrete</div>
-			                </li>
-			                <li id="epoxy-panel" class="active-panel">
-			                	<div class="kwicks-title">Decorative Epoxy</div>
-			                </li>
-			                <li id="driveway-stairs-panel">
-			                	<div class="kwicks-title">Driveway & Stair Coating</div>
-			                </li>
-			                <li id="commercial-panel">
-			                	<div class="kwicks-title">Commercial Flooring</div>
-			                </li>
-			            </ul>
-			        </span>
-			    </div>
-
-			</div>
 		</nav>
 	</header>
 
 	<section class="content col-md-12">
 
-
 	</section>
 
-	<footer class="col-lg-10 col-lg-offset-1 col-md-12">
+	<footer class="col-md-12">
 
-		<div class="col-xs-12 social-media">
-			<a class="fa-2x" href="https://twitter.com/EngraveConcrete"><i class="fa fa-twitter"></i></a>
-			<a class="fa-2x" href="https://facebook.com/floorcoat"><i class="fa fa-facebook"></i></a>
-			<a class="fa-2x" href="https://pinterest.com/floorcoat/"><i class="fa fa-pinterest"></i></a>
-			<a class="fa-2x" href="https://linkedin.com/pub/jordan-chorneyko/93/99b/671"><i class="fa fa-linkedin"></i></a>
-			<a class="fa-2x" href="https://youtube.com/user/decorativesurfaces?feature=guide"><i class="fa fa-youtube"></i></a>
-			<a class="fa-2x" href="https://www.yelp.com/biz/floor-coat-inc-st-albert"><i class="fa fa-yelp"></i></a>
-		</div>
-
-		<div class="col-xs-12 footer-information">
-			<span>Floor Coat Inc. &#9400; 2017</span> <br  />
-			<span>Edmonton, Alberta, Canada</span>
-		</div>
 	</footer>
 
 	<div class="back-to-top">
