--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <head>
 	<meta charset="utf-8">
-	<title>FLOOR COAT INC.</title>
+	<title>Floor Coat - Polyaspartic | Epoxy | Grind & Polish</title>
 	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width">
 
 	<link rel="stylesheet" href="compiled/home.css">
-
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400" rel="stylesheet">
+	<link rel="icon" href="favicon.ico">
 </head>
 
 <body>
@@ -15,59 +15,7 @@
 
 	<header>
 		<nav>
-			<div class="col-xs-12 top-menu-wrapper">
-				<div class="bt-menu" id="bt-menu">
-					<div class="bt-menu-trigger nav-trigger">
-						<span>MENU</span>
-					</div>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="garage-polyaspartic-chip-coating.html">Garage Polyaspartic Chip Coating</a></li>
-						<li><a href="grind-polished-concrete.html">Grind & Polished Concrete</a></li>
-						<li><a href="decorative-epoxy.html">Decorative Epoxy</a></li>
-						<li><a href="driveway-stair-coating.html">Driveway & Stair Coatings</a></li>
-						<li><a href="commercial-flooring.html">Commercial Flooring</a></li>
-						<li><a href="custom-logos.html">Custom Logos</a></li>
-						<li><a href="contact-us.html">Contact Us</a></li>
-					</ul>
-				</div>
 
-				<div class="title-row">
-					<a href="index.html"><span class="text-center title">FLOOR COAT INC.</span></a>
-				</div>
-
-				<div class="sub-title-row">
-					<span class="text-center sub-title">Polyaspartic | Epoxy | Grind & Polish</span>
-				</div>
-
-				<div class="contact-us-link nav-trigger">
-					<a href="contact-us.html"><span>CONTACT US</span></a>
-				</div>
-			</div>
-
-			<div class="col-md-10 col-md-offset-1 col-sm-12 kwicks-wrapper">
-			    <div class="col-xs-8 col-xs-offset-2">
-			        <span class="hidden-xs">
-			            <ul class='kwicks kwicks-horizontal'>
-			                <li id="garage-chip-panel">
-			                	<div class="kwicks-title">Garage Polyaspartic Chip Coating</div>
-			                </li>
-			                <li id="grind-panel">
-			                	<div class="kwicks-title">Grind & Polished Concrete</div>
-			                </li>
-			                <li id="epoxy-panel">
-			                	<div class="kwicks-title">Decorative Epoxy</div>
-			                </li>
-			                <li id="driveway-stairs-panel">
-			                	<div class="kwicks-title">Driveway & Stair Coating</div>
-			                </li>
-			                <li id="commercial-panel">
-			                	<div class="kwicks-title">Commercial Flooring</div>
-			                </li>
-			            </ul>
-			        </span>
-			    </div>
-			</div>
 		</nav>
 	</header>
 
@@ -75,14 +23,14 @@
 
 		<div class="welcome col-xs-12">
 			<div class="welcome-title" id="welcome-title-container">
-				<span>Welcome To Floor Coat Inc.</span>
+				<span>Welcome To Floor Coat</span>
 			</div>
 
 			<div class="col-xs-12 welcome-content-wrapper">
 				<p class="welcome-content">
-					Floor Coat Inc. is an Edmonton-based decorative flooring company serving all of Alberta. We offer a wide range of flooring options and specialize in concrete resurfacing and restoration. Some of our services include: polyaspartic garage & commercial floor coatings, grind & polished concrete, surface preparation, decorative epoxy and many other coatings for any interior or exterior surface.
+					Floor Coat is an Edmonton-based decorative flooring company serving all of Alberta. We offer a wide range of flooring options and specialize in concrete resurfacing and restoration. Some of our services include: polyaspartic garage & commercial floor coatings, grind & polished concrete, surface preparation, decorative epoxy and many other coatings for any interior or exterior surface.
 					<br /> <br />
-					What sets Floor Coat Inc. apart from everyone else? We build trust and great relationships with our clients. We are a family run business that takes great pride in our work. We are craftsmen who have over 70 years combined of residential and commercial contracting experience. We are a team of innovative professionals. We have extensive product knowledge and are experts at what we do, giving us complete confidence to guarantee our work to you.
+					What sets Floor Coat apart from everyone else? We build trust and great relationships with our clients. We are a family run business that takes great pride in our work. We are craftsmen who have over 70 years combined of residential and commercial contracting experience. We are a team of innovative professionals. We have extensive product knowledge and are experts at what we do, giving us complete confidence to guarantee our work to you.
 				</p>
 			</div>
 
@@ -206,21 +154,8 @@
 
 	</section>
 
-	<footer class="col-lg-10 col-lg-offset-1 col-md-12">
+	<footer class="col-md-12">
 
-		<div class="col-xs-12 social-media">
-			<a class="fa-2x" href="https://twitter.com/EngraveConcrete"><i class="fa fa-twitter"></i></a>
-			<a class="fa-2x" href="https://facebook.com/floorcoat"><i class="fa fa-facebook"></i></a>
-			<a class="fa-2x" href="https://pinterest.com/floorcoat/"><i class="fa fa-pinterest"></i></a>
-			<a class="fa-2x" href="https://linkedin.com/pub/jordan-chorneyko/93/99b/671"><i class="fa fa-linkedin"></i></a>
-			<a class="fa-2x" href="https://youtube.com/user/decorativesurfaces?feature=guide"><i class="fa fa-youtube"></i></a>
-			<a class="fa-2x" href="https://www.yelp.com/biz/floor-coat-inc-st-albert"><i class="fa fa-yelp"></i></a>
-		</div>
-
-		<div class="col-xs-12 footer-information">
-			<span>Floor Coat Inc. &#9400; 2017</span> <br  />
-			<span>Edmonton, Alberta, Canada</span>
-		</div>
 	</footer>
 
 	<div class="back-to-top">
