--- a/grind-polished-concrete.html
+++ b/grind-polished-concrete.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <head>
 	<meta charset="utf-8">
-	<title>FLOOR COAT - Grind & Polished Concrete</title>
+	<title>Floor Coat - Grind & Polished Concrete</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
 
