--- a/nav-template.html
+++ b/nav-template.html
@@ -16,11 +16,11 @@
 	</div>
 
 	<div class="title-row">
-		<a href="index.html" class="logo-link"><div class="text-center title"></div></a>
+		<a href="index.html" class="logo-link"><img src="logo.svg" class="title"/></a>
 	</div>
 
 	<div class="sub-title-row">
-		<span class="text-center sub-title">Polyaspartic | Epoxy | Grind & Polish</span>
+		<span class="sub-title">Polyaspartic | Epoxy | Grind & Polish</span>
 	</div>
 
 	<div class="contact-us-link nav-trigger">
@@ -29,7 +29,7 @@
 </div>
 
 <div class="col-md-10 col-md-offset-1 col-sm-12 kwicks-wrapper">
-    <div class="col-xs-8 col-xs-offset-2">
+    <div class="col-md-12 col-md-offset-0">
         <span class="hidden-xs">
             <ul class='kwicks kwicks-horizontal'>
                 <li id="garage-chip-panel" {{#if garage}}class="active-panel"{{/if}}>
