--- a/service-template.html
+++ b/service-template.html
@@ -2,7 +2,7 @@
 	<span>{{title}}</span>
 </div>
 
-<div class="col-xs-6">
+<div class="col-lg-6 col-md-10 col-md-offset-1">
 
 	<ul class="service-list">
 		<li class="service-list-header"><span>Benefits</span>
@@ -34,9 +34,9 @@
 
 </div>
 
-<div class="col-xs-6">
+<div class="col-lg-6 col-md-10 col-md-offset-1 portfolio-container">
 	<div class="portfolio-title">
-		<span>Recent {{title}} Jobs</span>
+		<span>Recent Work</span>
 	</div>
 
 	<br />
